--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "vercel": "^41.3.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
